--- a/high-heel.html
+++ b/high-heel.html
@@ -66,7 +66,7 @@
         <img class="slides" src="images/heels/slide15.jpg">
         <img class="slides" src="images/heels/slide16.jpg">
         <img class="slides" src="images/heels/slide17.jpg">
-        <video class="slides" src="images/heels/slide18.mov" controls></video>    
+        <video class="slides" src="images/heels/slide18.MOV" controls></video>    
         <img class="slides" src="images/heels/slide19.jpg">
         <img class="slides" src="images/heels/slide20.jpg">
         <img class="slides" src="images/heels/slide21.jpg">
