--- a/turtle.html
+++ b/turtle.html
@@ -32,7 +32,7 @@
        
       </header>
     <div class="container">
-        <img class="slides" src="images/turtle/IMG_3548.png">
+        <img class="slides" src="images/turtle/IMG_3548.jpg">
    </div>
     <div class="container">
          <video class="slides" src="images/turtle/IMG_3553 2.mov" controls></video>  
