--- a/carters.html
+++ b/carters.html
@@ -48,41 +48,41 @@
       </header>
 
     <div class="slideshow-container">
-        <img class="slides" src="images/carters/slide0.png">
-        <img class="slides" src="images/carters/slide1.png">
-        <img class="slides" src="images/carters/slide2.png">
-        <img class="slides" src="images/carters/slide3.png">
-        <img class="slides" src="images/carters/slide4.png">
-        <img class="slides" src="images/carters/slide5.png">
-        <img class="slides" src="images/carters/slide6.png">
-        <img class="slides" src="images/carters/slide7.png">
-        <img class="slides" src="images/carters/slide8.png">
-        <img class="slides" src="images/carters/slide9.png">
-        <img class="slides" src="images/carters/slide10.png">
-        <img class="slides" src="images/carters/slide11.png">
-        <img class="slides" src="images/carters/slide12.png">
-        <img class="slides" src="images/carters/slide13.png">
-        <img class="slides" src="images/carters/slide14.png">
-        <img class="slides" src="images/carters/slide15.png">
-        <img class="slides" src="images/carters/slide16.png">
-        <img class="slides" src="images/carters/slide17.png">
-        <img class="slides" src="images/carters/slide18.png">    
-        <img class="slides" src="images/carters/slide19.png">
-        <img class="slides" src="images/carters/slide20.png">
-        <img class="slides" src="images/carters/slide21.png">
-        <img class="slides" src="images/carters/slide22.png">
-        <img class="slides" src="images/carters/slide23.png">
-        <img class="slides" src="images/carters/slide24.png">
-        <img class="slides" src="images/carters/slide25.png">
-        <img class="slides" src="images/carters/slide26.png">
-        <img class="slides" src="images/carters/slide27.png">
-        <img class="slides" src="images/carters/slide28.png">    
-        <img class="slides" src="images/carters/slide29.png">
-        <img class="slides" src="images/carters/slide30.png">
-        <img class="slides" src="images/carters/slide31.png">
-        <img class="slides" src="images/carters/slide32.png">    
-        <img class="slides" src="images/carters/slide33.png">
-        <img class="slides" src="images/carters/slide34.png">
+        <img class="slides" src="images/carters/Slide0.png">
+        <img class="slides" src="images/carters/Slide1.png">
+        <img class="slides" src="images/carters/Slide2.png">
+        <img class="slides" src="images/carters/Slide3.png">
+        <img class="slides" src="images/carters/Slide4.png">
+        <img class="slides" src="images/carters/Slide5.png">
+        <img class="slides" src="images/carters/Slide6.png">
+        <img class="slides" src="images/carters/Slide7.png">
+        <img class="slides" src="images/carters/Slide8.png">
+        <img class="slides" src="images/carters/Slide9.png">
+        <img class="slides" src="images/carters/Slide10.png">
+        <img class="slides" src="images/carters/Slide11.png">
+        <img class="slides" src="images/carters/Slide12.png">
+        <img class="slides" src="images/carters/Slide13.png">
+        <img class="slides" src="images/carters/Slide14.png">
+        <img class="slides" src="images/carters/Slide15.png">
+        <img class="slides" src="images/carters/Slide16.png">
+        <img class="slides" src="images/carters/Slide17.png">
+        <img class="slides" src="images/carters/Slide18.png">    
+        <img class="slides" src="images/carters/Slide19.png">
+        <img class="slides" src="images/carters/Slide20.png">
+        <img class="slides" src="images/carters/Slide21.png">
+        <img class="slides" src="images/carters/Slide22.png">
+        <img class="slides" src="images/carters/Slide23.png">
+        <img class="slides" src="images/carters/Slide24.png">
+        <img class="slides" src="images/carters/Slide25.png">
+        <img class="slides" src="images/carters/Slide26.png">
+        <img class="slides" src="images/carters/Slide27.png">
+        <img class="slides" src="images/carters/Slide28.png">    
+        <img class="slides" src="images/carters/Slide29.png">
+        <img class="slides" src="images/carters/Slide30.png">
+        <img class="slides" src="images/carters/Slide31.png">
+        <img class="slides" src="images/carters/Slide32.png">    
+        <img class="slides" src="images/carters/Slide33.png">
+        <img class="slides" src="images/carters/Slide34.png">
         <img class="slides" src="images/carters/Slide35.png">
   
 
