--- a/pump-design.html
+++ b/pump-design.html
@@ -47,25 +47,25 @@
       </header>
 
     <div class="slideshow-container">
-        <img class="slides" src="images/design/slide0.png">
-        <img class="slides" src="images/design/slide1.png">
-        <img class="slides" src="images/design/slide2.png">
-        <img class="slides" src="images/design/slide3.png">
-        <img class="slides" src="images/design/slide4.png">
-        <img class="slides" src="images/design/slide5.png">
-        <img class="slides" src="images/design/slide6.png">
-        <img class="slides" src="images/design/slide7.png">
-        <img class="slides" src="images/design/slide8.png">
-        <img class="slides" src="images/design/slide9.png">
-        <img class="slides" src="images/design/slide10.png">
-        <img class="slides" src="images/design/slide11.png">
-        <img class="slides" src="images/design/slide12.png">
-        <img class="slides" src="images/design/slide13.png">
-        <img class="slides" src="images/design/slide14.png">
-        <img class="slides" src="images/design/slide15.png">
-        <img class="slides" src="images/design/slide16.png">
-        <img class="slides" src="images/design/slide17.png">
-        <img class="slides" src="images/design/slide18.png">    
+        <img class="slides" src="images/design/Slide0.png">
+        <img class="slides" src="images/design/Slide1.png">
+        <img class="slides" src="images/design/Slide2.png">
+        <img class="slides" src="images/design/Slide3.png">
+        <img class="slides" src="images/design/Slide4.png">
+        <img class="slides" src="images/design/Slide5.png">
+        <img class="slides" src="images/design/Slide6.png">
+        <img class="slides" src="images/design/Slide7.png">
+        <img class="slides" src="images/design/Slide8.png">
+        <img class="slides" src="images/design/Slide9.png">
+        <img class="slides" src="images/design/Slide10.png">
+        <img class="slides" src="images/design/Slide11.png">
+        <img class="slides" src="images/design/Slide12.png">
+        <img class="slides" src="images/design/Slide13.png">
+        <img class="slides" src="images/design/Slide14.png">
+        <img class="slides" src="images/design/Slide15.png">
+        <img class="slides" src="images/design/Slide16.png">
+        <img class="slides" src="images/design/Slide17.png">
+        <img class="slides" src="images/design/Slide18.png">    
        
        
 
