--- a/marble.html
+++ b/marble.html
@@ -33,7 +33,7 @@
       </header>
 
     <div class="container">
-         <video class="slides" src="images/marble.mp4" controls></video>  
+         <video class="slides" src="images/marble.mov" controls></video>  
     </div>  
 
 </body>
