--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     
       <div class="project">
         <div>
-          <h2 class="project-title"> Girl Scouts Switch Board Toy</h2>
+          <h2 class="project-title"> Switch Board Game</h2>
           <img src="images/switch.png" alt="Waterjet Keychain" class="project-image">
 
           <p class="project-description">  Assembled an interactive switch toy from scratch, involving electronic soldering, CNC machining, and laser-cut parts. Emphasized debugging circuits and hands-on component soldering for educational use.</p>
