--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div>
           <h2 class="project-title">Brosa Con Tutto</h2>
           <img src="images/bct.png" alt="The Everything Bag" class="project-image">
-          <p class="project-description"> Borsa Con Tutto is a stylish, multifunctional bag designed for grab-and-go convenience. Pre-loaded with essentials and paired with an optional refill subscription, it keeps users organized without sacrificing style. Developed through user-centered research and cross-functional collaboration, the project applied product management principles and guided the product through the full product life cycle—balancing user needs, cost, quality, and feasibility—to deliver a practical, elegant solution for busy, multitasking lifestyles. </p>
+          <p class="project-description"> Borsa Con Tutto is a stylish, multifunctional bag designed for grab-and-go convenience. Pre-loaded with essentials and paired with an optional refill subscription, it keeps users organized without sacrificing style. The project applied product management principles, taking the bag through the full product life cycle to balance user needs, cost, quality, and feasibility, resulting in a practical, elegant solution for busy, multitasking lifestyles. </p>
           <div class="tags">
             <span class="tag">Product Management</span>
             <span class="tag">Customer Needs Analysis</span>
