--- a/index.html
+++ b/index.html
@@ -401,10 +401,10 @@
   
       <div class="project">
         <div>
-          <h2 class="project-title">Girl Scouts Custom Keychains </h2>
+          <h2 class="project-title">Custom Keychains </h2>
           <img src="images/IMG_3144.jpg" alt="Switch Board" class="project-image">
 
-          <p class="project-description">Created personalized keychains using both water jet and laser cutting. Programmed toolpaths and operated the water jet cutter for high-precision designs.</p>
+          <p class="project-description">Created personalized Girl Scout keychains using both water jet and laser cutting. Programmed toolpaths and operated the water jet cutter for high-precision designs.</p>
           <div class="tags">
             <span class="tag">Water jet cutting</span>
             <span class="tag">Laser engraving</span>
