--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <a href="design-jam.html" class="project-card-link">  
       <div class="project-card">
         <div>
-          <h2 class="project-title">Service Design Competition: Student Passport</h2>
+          <h2 class="project-title">Service Design: Student Passport</h2>
           <img src="images/designjam/design_jam.png" alt="Design Jam" class="project-image">
 
           <p class="project-description">
